attempt at netwulf/epipack in notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -88,6 +88,56 @@
    "source": [
     "%run src/configure_network.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import yaml\n",
+    "import netwulf as nw\n",
+    "\n",
+    "state = yaml.safe_load(open(\"params.yaml\"))[\"state\"]\n",
+    "network, _, __ = nw.load(os.path.join('data', 'configured', f\"{state}_knn_graph.json\"))\n",
+    "\n",
+    "# stylized_network, config = nw.visualize(network)  # this is opening 2 netwulf interactive windows: one with our graph + another with default Les Mis characters?!\n",
+    "# nw.draw_netwulf(stylized_network)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "Library \"GL\" not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/__init__.py:336\u001b[0m, in \u001b[0;36m_ModuleProxy.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 336\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_module, name)\n\u001b[1;32m    337\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_create_shadow_window'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;32m/workspaces/epipack-spatial-demo/src/simulate_SIRS.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mepipack\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mepk\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mepipack\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvis\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetwulf\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnw\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39myaml\u001b[39;00m\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/epipack/vis.py:12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m \u001b[39mimport\u001b[39;00m shapes\n\u001b[0;32m---> 12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwindow\u001b[39;00m \u001b[39mimport\u001b[39;00m key, mouse, Window\n\u001b[1;32m     13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mepipack\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnetworks\u001b[39;00m \u001b[39mimport\u001b[39;00m get_random_layout, get_grid_layout\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/window/__init__.py:1919\u001b[0m\n\u001b[1;32m   1917\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m _is_pyglet_doc_run:\n\u001b[1;32m   1918\u001b[0m     pyglet\u001b[39m.\u001b[39mwindow \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39mmodules[\u001b[39m__name__\u001b[39m]\n\u001b[0;32m-> 1919\u001b[0m     gl\u001b[39m.\u001b[39;49m_create_shadow_window()\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/__init__.py:342\u001b[0m, in \u001b[0;36m_ModuleProxy.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    339\u001b[0m     \u001b[39mraise\u001b[39;00m\n\u001b[1;32m    341\u001b[0m import_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpyglet.\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_module_name\n\u001b[0;32m--> 342\u001b[0m \u001b[39m__import__\u001b[39;49m(import_name)\n\u001b[1;32m    343\u001b[0m module \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39mmodules[import_name]\n\u001b[1;32m    344\u001b[0m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m_module\u001b[39m\u001b[39m'\u001b[39m, module)\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/gl/__init__.py:95\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# ----------------------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# pyglet\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Copyright (c) 2006-2008 Alex Holkner\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[39m# POSSIBILITY OF SUCH DAMAGE.\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[39m# ----------------------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[39m\"\"\"OpenGL and GLU interface.\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \n\u001b[1;32m     38\u001b[0m \u001b[39mThis package imports all OpenGL, GLU and registered OpenGL extension\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[39mbelow.\u001b[39;00m\n\u001b[1;32m     93\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m---> 95\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     96\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mglu\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     97\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib\u001b[39;00m \u001b[39mimport\u001b[39;00m GLException\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/gl/gl.py:45\u001b[0m\n\u001b[1;32m     42\u001b[0m __version__ \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m$Id$\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     44\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mctypes\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m---> 45\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib\u001b[39;00m \u001b[39mimport\u001b[39;00m link_GL \u001b[39mas\u001b[39;00m _link_function\n\u001b[1;32m     46\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib\u001b[39;00m \u001b[39mimport\u001b[39;00m c_ptrdiff_t\n\u001b[1;32m     48\u001b[0m \u001b[39m# BEGIN GENERATED CONTENT (do not edit below this line)\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \n\u001b[1;32m     50\u001b[0m \u001b[39m# This content is generated by tools/gengl.py.\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[39m# Wrapper for /usr/include/GL/gl.h\u001b[39;00m\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/gl/lib.py:149\u001b[0m\n\u001b[1;32m    147\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib_agl\u001b[39;00m \u001b[39mimport\u001b[39;00m link_GL, link_GLU, link_AGL\n\u001b[1;32m    148\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 149\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgl\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlib_glx\u001b[39;00m \u001b[39mimport\u001b[39;00m link_GL, link_GLU, link_GLX\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/gl/lib_glx.py:45\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyglet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m asbytes\n\u001b[1;32m     43\u001b[0m __all__ \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mlink_GL\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlink_GLU\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlink_GLX\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 45\u001b[0m gl_lib \u001b[39m=\u001b[39m pyglet\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49mload_library(\u001b[39m'\u001b[39;49m\u001b[39mGL\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     46\u001b[0m glu_lib \u001b[39m=\u001b[39m pyglet\u001b[39m.\u001b[39mlib\u001b[39m.\u001b[39mload_library(\u001b[39m'\u001b[39m\u001b[39mGLU\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     48\u001b[0m \u001b[39m# Look for glXGetProcAddressARB extension, use it as fallback (for ATI fglrx and DRI drivers).\u001b[39;00m\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/pyglet/lib.py:168\u001b[0m, in \u001b[0;36mLibraryLoader.load_library\u001b[0;34m(self, *names, **kwargs)\u001b[0m\n\u001b[1;32m    165\u001b[0m             \u001b[39mif\u001b[39;00m _debug_lib:\n\u001b[1;32m    166\u001b[0m                 \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mUnexpected error loading library \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mstr\u001b[39m(o)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 168\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mLibrary \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m not found.\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m names[\u001b[39m0\u001b[39m])\n",
+      "\u001b[0;31mImportError\u001b[0m: Library \"GL\" not found."
+     ]
+    }
+   ],
+   "source": [
+    "%run src/simulate_SIRS.py"
+   ]
   }
  ],
  "metadata": {
